--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- 목록 추가 섹션 -->
         <div class="add-list-section">
             <input type="text" id="listTitle" placeholder="새 목록 제목">
-            <button onclick="addNewList()">목록 추가</button>
+            <button id="addListBtn">목록 추가</button>
         </div>
 
         <!-- 목록 표시 영역 -->
@@ -21,8 +21,8 @@
 
         <!-- GitHub 연동 섹션 -->
         <div class="github-section">
-            <button onclick="uploadToGithub()">GitHub에 업로드</button>
-            <button onclick="loadFromGithub()">GitHub에서 불러오기</button>
+            <button id="uploadBtn">GitHub에 업로드</button>
+            <button id="loadBtn">GitHub에서 불러오기</button>
         </div>
     </div>
     <script src="config.js"></script>
