--- a/index.html
+++ b/index.html
@@ -3,29 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>개인 목록 관리</title>
+    <title>리스트 관리</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>나의 목록 관리</h1>
-        
-        <!-- 목록 추가 섹션 -->
-        <div class="add-list-section">
-            <input type="text" id="listTitle" placeholder="새 목록 제목">
-            <button id="addListBtn">목록 추가</button>
+        <h1>리스트 관리</h1>
+        <div class="input-group">
+            <input type="text" id="newList" placeholder="새 리스트 이름">
+            <button onclick="addNewList()">추가</button>
         </div>
-
-        <!-- 목록 표시 영역 -->
-        <div id="listsContainer"></div>
-
-        <!-- GitHub 연동 섹션 -->
-        <div class="github-section">
-            <button id="uploadBtn">GitHub에 업로드</button>
-            <button id="loadBtn">GitHub에서 불러오기</button>
+        <div id="lists"></div>
+        <div class="github-buttons">
+            <button onclick="uploadToGithub()">GitHub에 업로드</button>
+            <button onclick="loadFromGithub()">GitHub에서 불러오기</button>
         </div>
     </div>
-    <script src="config.js"></script>
+    <script>
+        // GitHub 설정
+        const GITHUBTOKEN = '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';
+        const GITHUB_USERNAME = 'nomalria';
+        const GITHUB_REPO = 'listapps';
+        const DATA_FILE = 'lists.json';
+    </script>
     <script src="script.js"></script>
 </body>
-</html> 
+</html>
