--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>리스트 관리</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
     <div class="container">
@@ -20,6 +21,8 @@
         </div>
     </div>
     <script>
+        // Netlify 환경 변수를 window 객체에 할당
+        window.GITHUBTOKEN = process.env.GITHUBTOKEN;
         // GitHub 설정
         const GITHUB_USERNAME = 'nomalria';
         const GITHUB_REPO = 'listapps';
