--- a/index.html
+++ b/index.html
@@ -28,11 +28,8 @@
         </div>
         
         <!-- 통합 검색/추가 섹션 -->
-        <div class="search-add-section">
-            <div class="input-group">
-                <input type="text" id="searchInput" placeholder="방덱 검색 또는 새 방덱 추가..." class="search-input">
-                <button id="addListBtn">추가</button>
-            </div>
+        <div class="search-section">
+            <input type="text" id="searchInput" placeholder="방덱 검색..." class="search-input">
             <div id="searchResults" class="search-results"></div>
         </div>
         
