--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>방덱 목록 관리</title>
     <link rel="stylesheet" href="styles.css">
