--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         
         // GitHub OAuth 관련 코드
         const GITHUB_CLIENT_ID = 'Ov23liUbHbAVOH1dBqrp';
-        const GITHUB_REDIRECT_URI = window.location.origin;
+        const GITHUB_REDIRECT_URI = 'https://llsitappss.netlify.app';
         
         function handleGitHubLogin() {
             const state = Math.random().toString(36).substring(2);
